- Refactor DifficultySelection into difficultyOption component - Actually add score multipler factor into correct key matches on words AND letters - Use stat for some stats, pass accuracy to ScoreCard instead. Something is wrong with dispalyed totalScore though - Round some stuff - I think I need to re-consider score caluclation - it is too high - Fix unlocked level selection after completion - Add notification if new score for the level - Make scores human readable

--- a/src/components/scoreCard/scoreCard.sass
+++ b/src/components/scoreCard/scoreCard.sass
@@ -1,3 +1,7 @@
 .score-card
   > *
     margin: 15px 0px
+
+.score-card_new-high-score
+  color: #0ff902
+  text-shadow: none
